--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
-    //
+    //dagger & hilt
     implementation "com.google.dagger:hilt-android:2.46"
     kapt "com.google.dagger:hilt-android-compiler:2.46"
 
